add jpa and H2 db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-server.port = 8070
+server.port = 8071
+spring.security.user.name = fang
+spring.security.user.password = limotkl
+spring.jpa.show-sql = true
+spring.h2.console.enabled = true
