--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<dependency>
+    			<groupId>com.fasterxml.jackson.dataformat</groupId>
+    			<artifactId>jackson-dataformat-xml</artifactId>
+    			<version>2.9.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+<!-- 		<dependency> -->
+<!--     			<groupId>org.springframework.boot</groupId> -->
+<!--     			<artifactId>spring-boot-starter-security</artifactId> -->
+<!--     			<version>2.1.4.RELEASE</version> -->
+<!-- 		</dependency> -->
+		
+		
 	</dependencies>
 
 	<build>
