--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port = 8071
-spring.security.user.name = fang
-spring.security.user.password = limotkl
+#spring.security.user.name = fang
+#spring.security.user.password = limotkl
 spring.jpa.show-sql = true
 spring.h2.console.enabled = true
+
+#pring.datasource.url=jdbc:mysql://localhost:32782/phone_test
+#spring.datasource.username=root
+#spring.datasource.password=limotkl
