--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,13 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		
+ 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> 
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -49,12 +51,19 @@
     			<artifactId>jackson-dataformat-xml</artifactId>
     			<version>2.9.8</version>
 		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
 <!-- 		<dependency> -->
 <!--     			<groupId>org.springframework.boot</groupId> -->
 <!--     			<artifactId>spring-boot-starter-security</artifactId> -->
 <!--     			<version>2.1.4.RELEASE</version> -->
 <!-- 		</dependency> -->
+		
+		
+<!--  		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-java</artifactId>
+		</dependency>  -->
 		
 		
 	</dependencies>
